# data_science

./: .gitignore
computer_vision/: README.md
ml_engineering/tutorials/docker/: README.md
ml_engineering/tutorials/kubernetes/: README  README.md
optimization/or-tools/: fmcg_distribution_assignment_ortools.deepnote  linear_optimization_for_resource_allocation_ortools.deepnote  oil_and_gas_production_allocation_ortools.deepnote  scheduling_optimization_ortools.deepnote
optimization/pyomo/: fmcg_distribution_assignment_pyomo.deepnote  linear_optimization_for_resource_allocation_pyomo.deepnote  oil_and_gas_production_allocation_pyomo.deepnote  scheduling_optimization_pyomo.deepnote
optimization/scipy/: computation_workflow_from_business_rules.deepnote  fmcg_distribution_assignment_scipy.deepnote  healthcare_staffing_workflow.deepnote  linear_optimization_for_resource_allocation_scipy.deepnote  oil_and_gas_production_allocation_scipy.deepnote  scheduling_optimization_scipy.deepnote
search_and_ranking/search_and_ranking_demo/: Dockerfile  README.md  demo_run_log.txt  pyproject.toml  run_demo.py
search_and_ranking/search_and_ranking_demo/search/: retrieval.py
tutorials/deep-learning/: hf-transformers-quickstart.deepnote  pytorch-quickstart.deepnote  tutorial-intro-hugging-face-nlp-pytorch.deepnote
